# quilr-precommit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  setup.cfg
pre_commit_hooks/: check_attribute.py  check_attribute_tags.py  check_version.py  fix_yaml_fields.py  validate_schema.py  validate_tags.py  validate_uuid.py  validate_yaml_schema.py
